--- a/.htaccess
+++ b/.htaccess
@@ -40,6 +40,10 @@
             SetEnvIf Origin ":" IS_CORS
             Header set Access-Control-Allow-Origin "*" env=IS_CORS
         </FilesMatch>
+        <FilesMatch "^\..*" >
+            Order allow,deny
+            Deny from all
+		</FilesMatch>
     </IfModule>
 </IfModule>
 
