--- a/package.json
+++ b/package.json
@@ -1,6 +1,30 @@
 {
-  "dependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0"
-  }
+    "dependencies": {
+        "babel-cli": "^6.24.0",
+        "babel-preset-es2015": "^6.24.0"
+    },
+    "name": "emily-ruth-coach",
+    "version": "1.0.0",
+    "description": "Coming soon page for emilyruthcoach.com",
+    "main": "index.js",
+    "directories": {
+        "doc": "doc"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "css": "yuicompressor css/main.css -o css/main.min.css",
+        "js": "node_modules/babel-cli/bin/babel.js js/main.js --out-dir dist --source-maps  --presets es2015",
+        "build": "npm run css && npm run js",
+        "serve": "php -S 0.0.0.0:8000 -t ."
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/alexsasharegan/emily-ruth-coming-soon.git"
+    },
+    "author": "Alex Regan <alex.joseph.regan@gmail.com> (https://github.com/alexsasharegan)",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/alexsasharegan/emily-ruth-coming-soon/issues"
+    },
+    "homepage": "https://github.com/alexsasharegan/emily-ruth-coming-soon#readme"
 }
